fix for white bar on mobile

--- a/Public/StyleSheets/CommonStyles/FooterStyle.css
+++ b/Public/StyleSheets/CommonStyles/FooterStyle.css
@@ -1,6 +1,7 @@
 footer{
 	width:100%;
 	padding-top: 100px;
+	overflow-x: hidden;
 }
 
 .footerHolder{
